--- a/src/espanholol/studio/EspanhololFRM.form
+++ b/src/espanholol/studio/EspanhololFRM.form
@@ -164,12 +164,13 @@
         <Component class="javax.swing.JTable" name="tabela">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="7" rowCount="0">
+              <Table columnCount="8" rowCount="0">
                 <Column editable="false" title="ID" type="java.lang.String"/>
                 <Column editable="false" title="Tipo" type="java.lang.String"/>
                 <Column editable="false" title="Escopo" type="java.lang.String"/>
                 <Column editable="false" title="Inicializado" type="java.lang.Boolean"/>
                 <Column editable="false" title="Utilizado" type="java.lang.Boolean"/>
+                <Column editable="false" title="Parametro" type="java.lang.Integer"/>
                 <Column editable="false" title="Funcao" type="java.lang.Boolean"/>
                 <Column editable="false" title="Vetor" type="java.lang.Boolean"/>
               </Table>
@@ -187,6 +188,11 @@
                   <Renderer/>
                 </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
                   <Renderer/>
